<resources>
    <string name="app_name">MyOpencv</string>
    <string name="action_settings">Settings</string>
    <string name="action_load_image">Load Image</string>
    <string name="action_switch_camera">Switch Camera</string>
    <string name="action_gaussian_blur">Gaussian Blur</string>
    <string name="action_default">Default View</string>
    <string name="action_mean_blur">Mean Blur</string>
    <string name="action_median_blur">Median Blur</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_camera">Camera</string>
    <string name="hello_world">Hello world!</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="DoG">Difference of Gaussians</string>
    <string name="CannyEdges">Canny Edges</string>
    <string name="SobelFilter">Sobel Filter</string>
    <string name="HoughLines">Hough Lines</string>
    <string name="HoughCircles">Hough Circles</string>
    <string name="Contours">Contours</string>
    <string name="HarrisCorners">Harris Corners</string>
    <string name="action_load_first_image">Load First Image</string>
    <string name="action_load_second_image">Load Second Image</string>
</resources>
